--- a/langoal/langoal/src/main/resources/templates/index.html
+++ b/langoal/langoal/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <title>Langoal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 <h1>Hello, world!</h1>
