created entities and route for register tutor

--- a/langoal/langoal/src/main/resources/templates/index.html
+++ b/langoal/langoal/src/main/resources/templates/index.html
@@ -29,7 +29,10 @@
                 </form>
                 <button type="submit" class="btnForgot">Forgot My Password</button>
                 <div class="mt-15 dsp-flex">
-                    <p class="accountText">if you do not have an account click <span th:href="@{/register}" class="accountCreate">here</span></p>
+                    <p class="accountText">if you want to be a student click <a th:href="@{/registerstudent}" class="accountCreate">here</a></p>
+                </div>
+                <div class="dsp-flex">
+                    <p class="accountText">if you want to be a tutor click <a th:href="@{/registertutor}" class="accountCreate">here</a></p>
                 </div>
             </div>
         </div>
