--- a/langoal/langoal/src/main/resources/static/css/style.css
+++ b/langoal/langoal/src/main/resources/static/css/style.css
@@ -28,6 +28,16 @@ h1,h2,h3,h4,h5,h6,p,label {
     font-family: 'Quicksand';
 }
 
+a {
+    text-decoration: none !important;
+    color: var(--sideBar) !important;
+}
+
+a:hover {
+    text-decoration: none !important;
+    color: var(--sideBar) !important;
+}
+
 .dsp-flex {
     display: flex;
     align-content: center;
