--- a/langoal/langoal/src/main/resources/static/css/style.css
+++ b/langoal/langoal/src/main/resources/static/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap');
 
 * {
     padding: 0;
@@ -182,6 +183,18 @@ a:hover {
 }
 
 /*Login and Index page*/
+
+.langoalLogo {
+    font-family: 'Shadows Into Light Two'!important;
+    font-size: 3rem;
+    text-align: center;
+}
+
+.langoalSlogan {
+    font-family: 'Shadows Into Light Two'!important;
+    font-size: 16px;
+    text-align: center;
+}
 
 .bgModal {
     background-color: var(--modalColor);
