--- a/langoal/langoal/src/main/resources/templates/index.html
+++ b/langoal/langoal/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
 <div class="container-fluid dsp-flex">
     <div class="row">
         <div class="col-12 col-lg-12 col-md-12 col-sm-12">
-            <h1>Langoal Logo Goes Here</h1>
+            <h1 class="langoalLogo">Langoal</h1>
+            <p class="langoalSlogan">Spreading Knowledge</p>
             <div class="bgModal">
                 <form method="">
                     <div class="form-group">
