--- a/langoal/langoal/src/main/resources/templates/RegisterUser.html
+++ b/langoal/langoal/src/main/resources/templates/RegisterUser.html
@@ -9,12 +9,50 @@
   <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
-<h1>Hello, world!</h1>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-12 col-lg-12 col-md-12 col-sm-12">
+    <div class="row">
+        <div class="col-12 col-lg-12 col-md-12 col-sm-12">
+            <h1 class="langoalLogo">Langoal</h1>
+            <p class="langoalSlogan">Register User</p>
+            <div class="bgModal">
+                <form method="post" th:action="@{registerstudent}">
+                    <div class="form-group  dsp-flex ">
+                        <div class="col-6 col-lg-6 pr-5">
+                            <label class="formLabels">First Name</label>
+                            <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" th:value="${user.firstname}" required="required"/>
+                            <span th:errors="${user.firstname}"></span>
+
+                            <label class="formLabels">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="john@doe.com" th:value="${user.email}" required="required"/>
+                            <span th:errors="${user.email}"></span>
+
+                            <label class="formLabels">phone</label>
+                            <input type="tel" class="form-control" id="phone" placeholder="(xxx)xxx-xxxx" th:value="${user.phone}" required="required" maxlength="9" autocomplete="off"/>
+                            <span th:errors="${user.phone}"></span>
+
+                            <button type="submit" class="btnLogin mt-10 mb-10" th:href="@{/index}">Register</button>
+                        </div>
+
+                        <div class="col-6 col-lg-6 pl-5">
+
+                            <label class="formLabels">Last Name</label>
+                            <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" th:value="${user.lastname}" required="required"/>
+                            <span th:errors="${user.lastname}"></span>
+
+                            <label class="formLabels">Confirm Email</label>
+                            <input type="email" class="form-control" id="confirmEmail" placeholder="john@doe.com" th:value="${user.confirmemail}" required="required"/>
+                            <span th:errors="${user.confirmemail}"></span>
+
+                            <label class="formLabels">password</label>
+                            <input type="password" class="form-control" id="password" placeholder="enter your password" th:value="${user.password}" required="required"/>
+                            <span th:errors="${user.password}"></span>
+                            <button type="reset" class="btnForgot mt-10 mb-10">Clean Form</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
