--- a/langoal/langoal/src/main/resources/static/css/style.css
+++ b/langoal/langoal/src/main/resources/static/css/style.css
@@ -16,13 +16,6 @@
     --bgColor: #f2f2f2;
 }
 
-body {
-    background-image: linear-gradient(var(--sideBar), var(--bgColor));
-    height: 100vh;
-    align-items: center;
-    display: flex;
-}
-
 /*aux css pre defined classes*/
 
 h1,h2,h3,h4,h5,h6,p,label {
@@ -183,6 +176,13 @@ a:hover {
 }
 
 /*Login and Index page*/
+
+.loginBody {
+    background-image: linear-gradient(var(--sideBar), var(--bgColor));
+    height: 100vh;
+    align-items: center;
+    display: flex;
+}
 
 .langoalLogo {
     font-family: 'Shadows Into Light Two'!important;
