--- a/langoal/langoal/src/main/resources/templates/index.html
+++ b/langoal/langoal/src/main/resources/templates/index.html
@@ -8,32 +8,32 @@
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
-<body>
+<body class="loginBody">
 <div class="container-fluid dsp-flex">
     <div class="row">
         <div class="col-12 col-lg-12 col-md-12 col-sm-12">
-            <h1 class="langoalLogo">Langoal</h1>
+            <h1 class="langoalLogo mt-30">Langoal</h1>
             <p class="langoalSlogan">Spreading Knowledge</p>
             <div class="bgModal">
-                <form method="">
+                <form method="post" th:action="@{login}">
                     <div class="form-group">
                         <label class="formLabels">
                             Login
                         </label>
-                        <input type="email" class="form-control" id="emailLogin" placeholder="Enter your email" />
+                        <input type="email" class="form-control" name="email" placeholder="Enter your email"/>
                         <label class="formLabels">
                             Password
                         </label>
-                        <input type="password" class="form-control" id="passwordLogin" placeholder="Enter your password" />
+                        <input type="password" class="form-control" name="password" placeholder="Enter your password"/>
                     </div>
                     <button type="submit" class="btnLogin mt-30 mb-10">Login</button>
                 </form>
                 <button type="submit" class="btnForgot">Forgot My Password</button>
                 <div class="mt-15 dsp-flex">
-                    <p class="accountText">if you want to be a student click <a th:href="@{/registerstudent}" class="accountCreate">here</a></p>
+                    <p class="accountText">if you want to be a student click <a th:href="@{/student}" class="accountCreate">here</a></p>
                 </div>
                 <div class="dsp-flex">
-                    <p class="accountText">if you want to be a tutor click <a th:href="@{/registertutor}" class="accountCreate">here</a></p>
+                    <p class="accountText">if you want to be a tutor click <a th:href="@{/tutor}" class="accountCreate">here</a></p>
                 </div>
             </div>
         </div>
