--- a/langoal/langoal/src/main/resources/static/css/style.css
+++ b/langoal/langoal/src/main/resources/static/css/style.css
@@ -1,5 +1,308 @@
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --confirmBtn: #0cce6b;
+    --cancelBtn: #ef2d56;
+    --sideBar: #ed7d3a;
+    --iconColor: #dced31;
+    --modalColor: #363537;
+    --bgColor: #f2f2f2;
+}
+
+body {
+    background-image: linear-gradient(var(--sideBar), var(--bgColor));
+    height: 100vh;
+    align-items: center;
+    display: flex;
+}
+
+/*aux css pre defined classes*/
+
+h1,h2,h3,h4,h5,h6,p,label {
+    font-family: 'Quicksand';
+}
+
+a {
+    text-decoration: none !important;
+    color: var(--sideBar) !important;
+}
+
+a:hover {
+    text-decoration: none !important;
+    color: var(--sideBar) !important;
+}
+
+.dsp-flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.dsp-between {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.dsp-around {
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+}
+
+
+.mt-5 {
+    margin-top: 5px;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mt-15 {
+    margin-top: 15px;
+}
+
+.mt-30 {
+    margin-top: 30px;
+}
+
+.mr-5 {
+    margin-top: 5px;
+}
+
+.mr-10 {
+    margin-top: 10px;
+}
+
+.mr-15 {
+    margin-right: 15px;
+}
+
+.mr-30 {
+    margin-right: 30px;
+}
+
+.mb-5 {
+    margin-bottom: 5px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
+.mb-15 {
+    margin-bottom: 15px;
+}
+
+.mb-30 {
+    margin-bottom: 30px;
+}
+
+.ml-5 {
+    margin-left: 5px;
+}
+
+.ml-10 {
+    margin-left: 10px;
+}
+
+.ml-15 {
+    margin-left: 15px;
+}
+
+.ml-30 {
+    margin-left: 30px;
+}
+
+.pd-5 {
+    padding: 5px;
+}
+
+.pd-10 {
+    padding: 10px;
+}
+
+.pd-15 {
+    padding: 15px;
+}
+
+.pt-5 {
+    padding-top: 5px;
+}
+
+.pt-10 {
+    padding-top: 10px;
+}
+
+.pt-15 {
+    padding-top: 15px;
+}
+
+.pr-5 {
+    padding-right: 5px;
+}
+
+.pr-10 {
+    padding-right: 10px;
+}
+
+.pr-15 {
+    padding-right: 15px;
+}
+
+.pb-5 {
+    padding-bottom: 5px;
+}
+
+.pb-10 {
+    padding-bottom: 10px;
+}
+
+.pb-15 {
+    padding-bottom: 15px;
+}
+
+.pl-5 {
+    padding-left: 5px;
+}
+
+.pl-10 {
+    padding-left: 10px;
+}
+
+.pl-15 {
+    padding-left: 15px;
+}
+
+/*Login and Index page*/
+
+.langoalLogo {
+    font-family: 'Shadows Into Light Two'!important;
+    font-size: 3rem;
+    text-align: center;
+}
+
+.langoalSlogan {
+    font-family: 'Shadows Into Light Two'!important;
+    font-size: 16px;
+    text-align: center;
+}
+
+.bgModal {
+    background-color: var(--modalColor);
+    height: auto;
+    width: 100%;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.formLabels {
+    color: var(--bgColor);
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
+.btnLogin {
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    height: 40px;
+    color: var(--bgColor);
+    background-color: var(--confirmBtn);
+    font-family: 'Quicksand';
+}
+
+.btnForgot {
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    height: 40px;
+    color: var(--bgColor);
+    background-color: var(--cancelBtn);
+    font-family: 'Quicksand';
+}
+
+.accountCreate {
+    color: var(--sideBar);
+    cursor: pointer;
+}
+
+.accountText {
+    color: var(--iconColor);
+}
+
+.border {
+    border-radius: 20px;
+}
+
+.container-fluid {
+    height: 100%;
+}
+
+.main-page {
+    background-color: white;
+    border-radius: 20px;
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.sidebar {
+    background-color: white;
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.logo {
+    font-family: "Shadows Into Light Two" !important;
+    font-size: 2rem;
+    text-align: center;
+    color: black;
+}
+.nav-label {
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+
+.background {
+    background-color: rgba(54, 53, 55, 0.1)
+}
+
+.navigation li {
+    width: 100%;
+
+}
+
+.nav-item {
+    font-size: 32px;
+}
+
+.nav-item > a {
+    color: #363537;
+}
+
+.nav-item > a:hover {
+    color: #363537;
+}
+
+.nav-item:hover {
+
+    background-color: rgba(237, 125, 58, 0.1);
+}
+
+
 html,
 body {
     margin: 0;
