fixed the login issue

--- a/langoal/langoal/src/main/resources/templates/index.html
+++ b/langoal/langoal/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
             <h1 class="langoalLogo mt-30">Langoal</h1>
             <p class="langoalSlogan">Spreading Knowledge</p>
             <div class="bgModal">
-                <form method="post" th:action="@{login}">
+                <form method="post" th:action="@{dashboard}">
                     <div class="form-group">
                         <label class="formLabels">
                             Login
