setting new routes and pages

--- a/langoal/langoal/src/main/resources/templates/FindPartner.html
+++ b/langoal/langoal/src/main/resources/templates/FindPartner.html
@@ -21,32 +21,32 @@
     <div class="col-2 border sidebar">
       <div class="d-flex flex-column">
         <div class="row justify-content-center m-3">
-          <a href="/" class="logo text-decoration-none"> Langoal </a>
+          <a th:href="@{/dashboard}" class="logo text-decoration-none"> Langoal </a>
         </div>
         <ul
                 class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-sm-start navigation"
         >
           <li class="nav-item mb-2 w-100">
-            <a href="#" class="nav-link align-middle px-0">
+            <a th:href="@{/account}" class="nav-link align-middle px-0">
               <i class="fa-solid fa-user"></i>
               <span class="nav-label">ACCOUNT</span>
             </a>
           </li>
 
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link align-middle px-0">
+            <a th:href="@{/findpartner}" class="nav-link align-middle px-0">
               <i class="fa-solid fa-magnifying-glass"></i>
               <span class="nav-label">FIND PARTNER</span>
             </a>
           </li>
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link align-middle px-0">
+            <a th:href="@{/premium}" class="nav-link align-middle px-0">
               <i class="fa-solid fa-crown"></i>
               <span class="nav-label">GET PREMIUM</span>
             </a>
           </li>
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link align-middle px-0">
+            <a th:href="@{/settings}" class="nav-link align-middle px-0">
               <i class="fa-solid fa-gear"></i>
               <span class="nav-label">SETTINGS</span>
             </a>
