--- a/langoal/langoal/src/main/resources/templates/UserAccount.html
+++ b/langoal/langoal/src/main/resources/templates/UserAccount.html
@@ -17,13 +17,13 @@
     <div class="col-2 border sidebar">
       <div class="d-flex flex-column">
         <div class="row justify-content-center m-3">
-          <a th:href="@{/dashboard}" class="logo text-decoration-none"> Langoal </a>
+          <a th:href="@{/dashboard}" class="logo accountCreate"> Langoal </a>
         </div>
         <ul
                 class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-sm-start navigation"
         >
           <li class="nav-item mb-2 w-100">
-            <a th:href="@{/account}" class="nav-link align-middle px-0">
+            <a th:href="@{/verification}" class="nav-link align-middle px-0">
               <i class="fa-solid fa-user"></i>
               <span class="nav-label">ACCOUNT</span>
             </a>
