--- a/langoal/langoal/src/main/resources/static/css/style.css
+++ b/langoal/langoal/src/main/resources/static/css/style.css
@@ -200,6 +200,12 @@ h1,h2,h3,h4,h5,h6,p,label {
     margin-top: 15px;
 }
 
+.userLabels {
+    color: var(--modalColor);
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
 .btnLogin {
     width: 100%;
     border-radius: 5px;
